Visualizer: use undeprecated newInstance()